# scratch-shiro-old

./: .gitignore  .gitmodules  CMakeLists.txt  CTestCustom.cmake  README.md
compiler/: block_map.cpp  cli.cpp  compiler.cpp  compiler.h  scratch.h  util.cpp  util.h
player/: audio_engine.cpp  audio_engine.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  target_impl.cpp  target_impl.h  test.cpp  texture.cpp  texture.h
player/shader/: target.frag  target.vert
test/: CMakeLists.txt  main.cpp  procedure.json
test/units/: is_valid_number.cpp
vm/: clipcc_vm.h  coroutine.h  lib.cpp  lib.h  runtime.cpp  runtime.h  target.cpp  target.h  test.cpp  thread.cpp  thread.h  type.h  variant.cpp  variant.h  vm.h
